# MARTApp

./: .gitignore  README.md  quick_launch_manual.md
src/: README.md  environment.yml
src/martapp/: MANIFEST.in  license.header  setup.cfg  setup.py
src/martapp/src/sdm/magnetism_gui/: _version.py
src/martapp/src/sdm/magnetism_gui/guis/: __init__.py
src/martapp/src/sdm/magnetism_gui/guis/magnetism/: ui_workflow.py  ui_workflow.ui  workflow.py
src/martapp/src/sdm/magnetism_gui/guis/magnetism_2Dreconstruction/: magnetism_2Dreconstruction_GUI.py  ui_magnetism2Dreconstruction.py  ui_magnetism2Dreconstruction.ui
src/martapp/src/sdm/magnetism_gui/guis/magnetism_3Dreconstruction/: absorption_3Dreconstruction_GUI.py  signal_3Dreconstruction_GUI.py  ui_absorption3Dreconstruction.py  ui_absorption3Dreconstruction.ui  ui_signal3Dreconstruction.py  ui_signal3Dreconstruction.ui
src/martapp/src/sdm/magnetism_gui/guis/magnetism_preprocessing/: __init__.py  magnetism_GUI.py  ui_magnetism.py  ui_magnetism.ui
src/martapp/src/sdm/magnetism_gui/guis/magnetism_xmcd/: magnetism_xmcd_GUI.py  ui_magnetismXMCD.py  ui_magnetismXMCD.ui
src/martapp/src/sdm/magnetism_gui/guis/manual_alignment/: ManualImageAlignment.py  ui_ManualImageAlignment.py  ui_ManualImageAlignment.ui
src/sdm-mistral/: AUTHORS.rst  LICENSE  MANIFEST.in  README.rst  add_copyright.sh  copyright_header.txt  setup.cfg  setup.py
src/sdm-mistral/src/sdm/mistral/: __init__.py  _version.py  image.py  parser.py  util.py  xrm2hdf5.py  xrmnex.py
src/sdm-mistral/src/sdm/mistral/images/: imagestostack.py  multiplealign.py  multipleaverage.py  multiplecrop.py  multiplenormalization.py  multiplexrm2h5.py  util.py
src/sdm-mistral/src/sdm/mistral/matlab/magnetism_absorption3Dreconstruction_src/: Raypath_Gen.m  SclTomoRec_Parallel_SingTilt_SIRT.m  SclTomo_Fwd_Mat_Parallel_SingTiltSIRT.m  SingTilt_ChargeTomoRec_Main_Parallel_SIRT.m
src/sdm-mistral/src/sdm/mistral/matlab/magnetism_signal3Dreconstruction_src/: Proj_Mat_Arrang_SIRT.m  RotMatGen.m  SingTilt_MagTomoRec_Main_Parallel_SIRT.m  VecTomoRec_Parallel_SingTilt_SIRT.m  VecTomo_Fwd_Mat_Parallel_SingTiltSIRT.m
src/sdm-mistral/src/sdm/mistral/scripts/: __init__.py  create_db.py  ctalignxcorr.py  magnetism_2Dreconstruction.py  magnetism_absorption3Dreconstruction.py  magnetism_preprocessing.py  magnetism_signal3Dreconstruction.py  magnetism_xmcd.py  parser.py
