[metadata]
name = sdm-magnetism-gui
author = ALBA Scientific Data Management
author_email = scientificdatamanagement@cells.es
description = GUI for the magentism pipelines used in MISTRAL: magnetism_preprocessing, magnetism_xmcd, magnetism_2Dreconstruction and magnetism_3Dreconstruction.
long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
license = GPLv3
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Natural Language :: English
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.9

[options]
package_dir =
    =src
namespace_packages = sdm
packages = find_namespace:
python_requires = >=3.5

[options.packages.find]
where = src

[options.package_data]
* = *.ico

[options.entry_points]
console_scripts =
    martapp = sdm.magnetism_gui.guis.magnetism.workflow:main
    marta = sdm.magnetism_gui.guis.magnetism.workflow:main
    MARTApp = sdm.magnetism_gui.guis.magnetism.workflow:main
    magnetism_gui = sdm.magnetism_gui.guis.magnetism.workflow:main
    magnetism_preprocessing_gui = sdm.magnetism_gui.guis.magnetism_preprocessing.magnetism_GUI:main
    magnetism_xmcd_gui = sdm.magnetism_gui.guis.magnetism_xmcd.magnetism_xmcd_GUI:main
    magnetism_2Dreconstruction_gui = sdm.magnetism_gui.guis.magnetism_2Dreconstruction.magnetism_2Dreconstruction_GUI:main
    manual_alignment = sdm.magnetism_gui.guis.manual_alignment.ManualImageAlignment:main

[versioneer]
VCS = git
style = pep440
versionfile_source = src/sdm/magnetism_gui/_version.py
tag_prefix = v
parentdir_prefix = sdm-magnetism_gui-

[flake8]
max-line-length = 80
ignore = E203,E402,E800,W503,W391,E261
exclude =
    src/sdm/magnetism_gui/_version.py
per-file-ignores =
    __init__.py:F401,
docstring-convention = numpy
