[metadata]
name = sdm-mistral
author = Joaquin Gomez Sanchez, Gabriel Jover Mañas
author_email = jgsanchez@cells.es
maintainer = ALBA Scientific Data Management
maintainer_email = scientificdatamanagement@cells.es
description = Scientific software for Mistral beamline at ALBA Synchrotron.
long_description = file: README.rst, AUTHORS.rst, CHANGELOG.rst, LICENSE.rst
license = GPLv3
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.12

[options]
package_dir =
    =src
namespace_packages = sdm
packages = find_namespace:
python_requires = >=3.5
install_requires =
    numpy
    h5py
    olefile
    tinydb
    opencv-python
    termcolor
    joblib
    mrcfile
    scipy
    setuptools
    dask
    pystackreg
    matplotlib
    SimpleITK
    PyQt5
    skimage
    xpytools
    

[options.packages.find]
where = src

[options.package_data]
sdm-mistral = matlab/*

[options.entry_points]
console_scripts =
    ctalignxcorr = sdm.mistral.scripts.ctalignxcorr:main
    magnetism_preprocessing = sdm.mistral.scripts.magnetism_preprocessing:main
    magnetism_xmcd = sdm.mistral.scripts.magnetism_xmcd:main
    magnetism_2Dreconstruction = sdm.mistral.scripts.magnetism_2Dreconstruction:main
    magnetism_absorption3Dreconstruction = sdm.mistral.scripts.magnetism_absorption3Dreconstruction:main
    magnetism_signal3Dreconstruction = sdm.mistral.scripts.magnetism_signal3Dreconstruction:main

[versioneer]
VCS = git
style = pep440
versionfile_source = src/sdm/mistral/_version.py
tag_prefix = v
parentdir_prefix = sdm-mistral-

[flake8]
max-line-length = 80
ignore = E203,E402,E800,W503,W391,E261
exclude =
    src/sdm/mistral/_version.py
per-file-ignores =
    __init__.py:F401,
docstring-convention = numpy
